welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var tab = new Array[Int](num)
  tab(0) = 1
  for (k <- 1 to num-1) {
    var occ = compteur(k-1,tab)
    if (occ == tab(k-1)) {
      tab(k) = k
    } else {
      tab(k) = k-1
    }
    return tab(num-1)
  }
}

def compteur(nombre:Int, tableau:Array[Int]) {
  var resultat = 0
  for (k <- 0 to tableau.length-1) {
    if (tableau(k)==nombre) {
      resultat = resultat + 1
    }
  }
}